# mailerx

./: .env.example  .flake8  Dockerfile  README.md  compose.yml  pyproject.toml
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_alter_client_options.py  0003_alter_client_options.py  0004_alter_client_options.py
config/: celery.py  settings.py  urls.py
core/: mixins.py  settings.py  urls.py
dashboard/: urls.py  views.py
mail_messages/: admin.py  forms.py  models.py  urls.py  views.py
mail_messages/migrations/: 0001_initial.py  0002_message_mail_messag_owner_i_13f0c8_idx.py  0003_alter_message_options.py  0004_alter_message_options.py  0005_alter_message_options.py
mailings/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_mailing_owner_message_owner.py  0003_alter_mailing_message_delete_message.py  0004_alter_mailingattempt_mailing.py  0005_mailing_mailings_ma_owner_i_001dc3_idx_and_more.py  0006_alter_mailing_options.py  0007_alter_mailing_options.py  0008_mailing_is_active.py  0009_alter_mailing_options_alter_mailingattempt_options.py  0010_mailingattempt_client_and_more.py
templates/: base.html
templates/clients/: client_confirm_delete.html  client_form.html  client_list.html
templates/dashboard/: home.html
templates/mail_messages/: message_confirm_delete.html  message_form.html  message_list.html
templates/mailings/: home.html  (+3 more)
users/: admin.py  forms.py  managers.py  models.py  services.py  urls.py  views.py
(+27 files in other folders)
